--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,3 +17,24 @@ a {
     font-family: var(--font-para);
     color: var(--text-link); 
 }
+a:hover {
+    color: var(--text-hover); 
+}
+a:visited {
+    color: var(--text-clicked); 
+}
+button {
+    border: none;
+    border-radius: 5px;
+    padding: 5px 20px;
+    font-size: 1.25em;
+    color: var(--color-dark1);
+    background: var(--color-btn1)
+}
+button:hover {
+    background: var(--color-btn2);
+    cursor: pointer;
+}
+img {
+    width: 100%;
+}
