--- a/src/styles/level.module.css
+++ b/src/styles/level.module.css
@@ -8,32 +8,25 @@
     display: flex;
     flex-direction: column;
 }
-.level {
-    background: #3E1429;
-    justify-content: center;
+.gameContainer {
     margin: auto;
-    padding: 20px 0 0 0;
-}
-.gamebox {
+    /* display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; */
     background: #3E1429;
-    height: 80vh;
-    width: 100%;
+    height: 600px;
+    width: 600px;
 }
-.timebar {
-    background: #3E1429;
-    justify-content: space-between;
-    padding: 20px 0 20px 0;
-}
-.timeItem {
-    width: 30%;
-}
-.timer {
-    background: var(--bg-color2);
-    text-align: center;
-}
-.par {
-    background: var(--bg-color2);
+.gameInner {
+    /* blah */
 }
 .buttonbar {
     padding: 20px 0 20px 0; 
+}
+.level {
+    /* background: #3E1429; */
+    justify-content: center;
+    margin: auto;
+    padding: 20px 0 0 0;
 }
