--- a/src/styles/level.module.css
+++ b/src/styles/level.module.css
@@ -10,10 +10,11 @@
 }
 .gameContainer {
     margin: auto;
-    /* display: flex;
+    display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
     background: #3E1429;
     height: 600px;
     width: 600px;
