--- a/src/styles/level.module.css
+++ b/src/styles/level.module.css
@@ -9,11 +9,14 @@
     flex-direction: column;
 }
 .gameContainer {
+    box-sizing: 'border-box';
+    border: 10px solid rgb(62, 20, 41);
+    border-radius: 3px;
     margin: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     background: #3E1429;
     height: 600px;
