--- a/src/styles/level.module.css
+++ b/src/styles/level.module.css
@@ -34,3 +34,24 @@
     margin: auto;
     padding: 20px 0 0 0;
 }
+@keyframes alertFault {
+    0% {opacity: 0%;
+        display: none;
+    }
+    1% {opacity: 0%;
+        display: block;
+    }
+    10% {opacity: 100%;
+    }
+    90% {opacity: 100%;
+    }
+    99% {opacity: 0%;
+        display: block;
+    }
+    99% {opacity: 0%;
+        display: none;
+    }
+}
+.alert {
+    animation: alertFault 3s 1;
+}
